# GamlaChain

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: chain.json  faucet.json  sessions.json  users.json  wallets.json
deploy/: README.md  gamlachain.service
docs/: design.md  developer-guide.md  usage.md
docs/reference/: Learn Blockchains by Building One _ HackerNoon.html  Learn Blockchains by Building One _ HackerNoon.md
docs/reference/Learn Blockchains by Building One _ HackerNoon_files/: 100fbc40-302b4050e4355040.js.下载  1486.4d77b5ff90282fa1.js.下载  1826.f07e9b8bd3738380.js.下载  18778700.js.下载  1902-922299f711a16f76.js.下载  2348.bfcd6e8a66abb447.js.下载  3213.0301e078f62a370c.js.下载  3261-28f7d7d5ddf137c8.js.下载  3304.e3eaf8708d361f34.js.下载  3340.0e097995821c8304.js.下载  3363-3997af8403818196.js.下载  3586-9b2027a924518316.js.下载  3854.1970e774c4acbaea.js.下载  4004-da1de6686039418a.js.下载  (+54 more)
frontend/: admin.html  dashboard.html  index.html  login.html  original_explorer.html  register.html
frontend/css/: neumorphism.css
gamla_chain/: __init__.py  __main__.py  config.py
gamla_chain/api/: middleware.py  routes.py  routes_admin.py  routes_auth.py  routes_faucet.py  routes_wallet.py  server.py
gamla_chain/core/: auth.py  block.py  blockchain_manager.py  chain.py  consensus.py  persistence.py  transaction.py  wallet.py  wallet_manager.py
gamla_chain/utils/: __init__.py  crypto.py  rate_limiter.py  serializer.py
scripts/: demo.py
tests/: test_auth.py  test_chain.py  test_integration.py  test_persistence.py  test_wallet_manager.py
(+2 files in other folders)
